adding the lines must be added to VM arguments while running the code